--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/437000937b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" media="screen and (max-width: 1170px)" href="phone.css">
+    <link rel="icon" href="img/logo.ico">
 </head>
 
 <body>
